Modify app.css test

--- a/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
+++ b/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
@@ -84,3 +84,13 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
     padding-top: 0;
   }
 }
+
+/* ==========================================================================
+   Mods
+   ========================================================================== */
+
+.hero-unit {
+   p {
+     font-size: 24px;
+   }
+}
