Recompile bootstrap css files test reverse

--- a/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/less/variables.less
+++ b/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/less/variables.less
@@ -201,7 +201,7 @@
 
 // Hero unit
 // -------------------------
-@heroUnitBackground:              #999999;
+@heroUnitBackground:              @grayLighter;
 @heroUnitHeadingColor:            inherit;
 @heroUnitLeadColor:               inherit;
 
