--- a/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
+++ b/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
@@ -105,7 +105,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 /* Link mods */
 
 a {
-  color: #ff33cc;
+  color: #3366cc;
   text-decoration: none;
 }
 a:hover {
