--- a/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
+++ b/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
@@ -115,8 +115,17 @@ a:hover {
 
 .row-pink {
   background-color: #ffe6e6;
-    padding: 35px;
+  padding: 0;
 }
+
+.footer {
+  position: relative;
+  background-color: #ffe6e6;
+  margin-top: -150px; /* negative value of footer height */
+  height: 150px;
+  clear:both;
+  padding-top:20px;
+} 
 
 .well-pink {
   min-height: 20px;
