--- a/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
+++ b/php/wp-content/themes/retlehs-roots-33d78b7/assets/css/app.css
@@ -12,8 +12,8 @@ body { }
 
 #banner { }
 
-/* Fixed Topbar Navigation */
-body.top-navbar { padding-top: 60px; }
+/* Fixed Topbar Navigation ... first value originally 60 */
+body.top-navbar { padding-top: 80px; }
 body.admin-bar .navbar-fixed-top { top: 28px; }
 
 
