--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -38,7 +38,8 @@ body.admin-bar .navbar-fixed-top { top: 28px; }
    Sidebar
    ========================================================================== */
 
-#sidebar { }
+#sidebar {
+}
 
 
 
