--- a/php/wp-content/plugins/woocommerce/assets/css/admin.less
+++ b/php/wp-content/plugins/woocommerce/assets/css/admin.less
@@ -291,6 +291,9 @@ table.wc_status_table {
 
 
 /* Orders */
+.tablenav .actions {
+	overflow: visible;
+}
 .alignleft.actions .chzn-container-single {
 	display: inline-block;
 	vertical-align: middle;
@@ -815,7 +818,7 @@ table.wc_status_table {
 			text-align: center;
 			white-space: nowrap;
 			padding: 0 2px;
-			
+
 			background: #999;
 			font-size:11px;
 			line-height: 1.75;
