Front page edits

--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -46,7 +46,18 @@ body.admin-bar .navbar-fixed-top { top: 28px; }
   background-color: #fff;
   padding-top: 90px;
 }
+.widget-inner h3 {
+border-bottom: 6px solid #EEE;
+font-size: 14px;
+padding: 5px 5px 5px 5px;
+margin: 0 0 5px;
+color: #999;}
 
+.widget-inner {
+font-size: 14px;
+padding: 5px 5px 5px 5px;
+margin: 0 0 5px;
+color: #666;}
 
 
 /* ==========================================================================
