--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -219,16 +219,4 @@ a:hover {
 .h5-tight {
   line-height: 100%;
 }
-
-.gform_wrapper ul { list-style: none; margin-left: 0; }
-.gform_wrapper form { margin-bottom: 0; }
-
-.gfield_radio input,
-.gfield_checkbox input {
-  vertical-align: 0;
-}
-.gfield_radio label,
-.gfield_checkbox label {
-  display: inline-block;
-  margin-left: 8px;
-}
+body .gform_wrapper .gform_body .gform_fields .gfield .gfield_label {color:#777}
