--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -228,3 +228,10 @@ a:hover {
   display: inline-block;
   margin-left: 8px;
 }
+
+::selection {
+  background: #ffb7b7; /* Safari */
+  }
+::-moz-selection {
+  background: #ffb7b7; /* Firefox */
+}
