--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -111,6 +111,19 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    Mods
    ========================================================================== */
 
+.newshead {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #6b6b6b;
+  margin-top: 10px;
+  margin-right: 0px;
+  margin-bottom: 5px;
+  margin-left: 0px;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 128%;
+}
+
 .fineprint {
   font-family: Arial, Helvetica, sans-serif;
   color: #6b6b6b;
