--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -236,3 +236,21 @@ a:hover {
 ::-moz-selection {
   background: #ffb7b7; /* Firefox */
 }
+
+#cart {
+  width: 80px;
+  height: 50px;
+  text-decoration: none;
+  display: inline-block;
+  background-image: url("http://www.themco.ca/wp-content/uploads/2013/11/viewcart.png");
+  background-position: 0px 0;
+  margin: 0px;
+}
+
+#cart:hover {
+  background-position: 80px 0;
+}
+
+#cart:active {
+  background-position: 80px 0;
+}
