--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -254,3 +254,7 @@ a:hover {
 #cart:active {
   background-position: 80px 0;
 }
+
+.wpcf7 input[type="text"] {width:355px;}
+.wpcf7 textarea { width:90%;}
+
