--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -255,6 +255,6 @@ a:hover {
   background-position: 80px 0;
 }
 
-.wpcf7 input[type="text"] {width:355px;}
+.wpcf7 input[type="text"] {width:90%;}
 .wpcf7 textarea { width:90%;}
 
