--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -264,9 +264,7 @@ a:hover {
    ========================================================================== */
 
 .coverheader {
-	position:absolute;
-	top: 10px;
-	left: 10px;
+	position:relative;
 	z-index: 1;
 }
 
