Image placement tests

--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -264,16 +264,18 @@ a:hover {
    ========================================================================== */
 
 .covercontainer {
-	position: relative;
+  position: relative;
 }
 
 .coverheader {
-	position:relative;
-	z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 
 .playbutton {
-	position:absolute;
-	top: -30px;
-	z-index: 2;
+  position: relative;
+  top: -115px;
+  left: 15px;
+  z-index: 2;
 }
+
