Touring glyphicon css

--- a/php/wp-content/themes/roots-master/assets/css/app.css
+++ b/php/wp-content/themes/roots-master/assets/css/app.css
@@ -279,3 +279,5 @@ a:hover {
   bottom: 10px;
   z-index: 2;
 }
+
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
